# whisper-library

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated.js  bitSetCoder_8hpp_source.html  channelmanager_8hpp_source.html  classboost_1_1asio_1_1ip_1_1RawSocketProtocol-members.html  classboost_1_1asio_1_1ip_1_1RawSocketProtocol.html  classboost_1_1asio_1_1ip_1_1RawSocketProtocol.js  classes.html  classwhisper__library_1_1BitSetCoder-members.html  classwhisper__library_1_1BitSetCoder.html  classwhisper__library_1_1BitSetCoder.js  classwhisper__library_1_1ChannelManager-members.html  classwhisper__library_1_1ChannelManager.html  classwhisper__library_1_1ChannelManager.js  classwhisper__library_1_1CovertChannel-members.html  classwhisper__library_1_1CovertChannel.html  classwhisper__library_1_1CovertChannel.js  classwhisper__library_1_1CovertChannel__inherit__graph.map  classwhisper__library_1_1CovertChannel__inherit__graph.md5  classwhisper__library_1_1EthernetHeader-members.html  classwhisper__library_1_1EthernetHeader.html  classwhisper__library_1_1EthernetHeader.js  classwhisper__library_1_1GenericPacket-members.html  classwhisper__library_1_1GenericPacket.html  classwhisper__library_1_1GenericPacket.js  classwhisper__library_1_1GenericPacket__inherit__graph.map  classwhisper__library_1_1GenericPacket__inherit__graph.md5  classwhisper__library_1_1IpHeaderv4-members.html  classwhisper__library_1_1IpHeaderv4.html  classwhisper__library_1_1IpHeaderv4.js  classwhisper__library_1_1LengthCoder-members.html  classwhisper__library_1_1LengthCoder.html  classwhisper__library_1_1LengthCoder.js  classwhisper__library_1_1MorseCoder-members.html  classwhisper__library_1_1MorseCoder.html  classwhisper__library_1_1MorseCoder.js  classwhisper__library_1_1NetworkConnector-members.html  (+157 more)
Vortragstraining/: BP_praes.aux  BP_praes.len  BP_praes.nav  BP_praes.tex
Vortragstraining/Bilder/: Thumbs.db  framework-puzzle.dia
doc/: code-review-checklist.txt
doc/code-review/: 14-02-13-code-review-#10-3.odt  Thumbs.db  code-review-checklist.odt
doc/doxygen/: whisperLibraryConfig  whisperLibraryConfig~
doc/doxygen/html/: annotated.html  annotated.js  bit_set_coder_8hpp_source.html  channelmanager_8hpp_source.html  classboost_1_1asio_1_1ip_1_1_raw_socket_protocol-members.html  classboost_1_1asio_1_1ip_1_1_raw_socket_protocol.html  classboost_1_1asio_1_1ip_1_1_raw_socket_protocol.js  classes.html  classwhisper__library_1_1_bit_set_coder-members.html  classwhisper__library_1_1_bit_set_coder.html  classwhisper__library_1_1_bit_set_coder.js  classwhisper__library_1_1_channel_manager-members.html  classwhisper__library_1_1_channel_manager.html  classwhisper__library_1_1_channel_manager.js  classwhisper__library_1_1_covert_channel-members.html  classwhisper__library_1_1_covert_channel.html  classwhisper__library_1_1_covert_channel.js  (+103 more)
doc/presentation/: BP_praes.len
doc/qadoc/: QS-Dokument.tex  Vorlage QS-Dokument-blx.bib  Vorlage QS-Dokument.tex
example/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  example.vcxproj  example.vcxproj.filters  main.cpp
pidgin/: CMakeLists.txt  readme-win32.txt  whisper_library.c  whisper_library_wrapper.h
pidgin/cmake/Modules/: FindGLIB.cmake
pidgin/lib/: intl.lib  libglib-2.0-0.lib  libgobject-2.0-0.lib  libgtk-win32-2.0-0.lib  libpurple.lib  pidgin.lib
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  (+27 more)
tests/: CMakeLists.txt  bitSetCoderTest.cpp  bitSetDecoderTest.cpp  bitSetEncoderTest.cpp  main_test_suite.cpp  tcpHeaderCovertChannelTest.cpp  tcpPacketTest.cpp
whisper-library/: CMakeLists.txt  CMakeLists.txt~
whisper-library/include/whisper-library/: common.hpp  encoder.hpp  socketconnector.hpp  tcppackage.hpp  tcppacket.hpp
whisper-library/src/: encoder.cpp  socketconnector.cpp  tcppackage.cpp  tcppacket.cpp
whisperLibrary/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  mainpage.dox  tests.vcxproj  tests.vcxproj.filters  whisperLibrary.sln  whisperLibrary.vcxproj  whisperLibrary.vcxproj.filters
whisperLibrary/include/whisperLibrary/: bitSetCoder.hpp  bitSetDecoder.hpp  bitSetEncoder.hpp  channelmanager.hpp  common.hpp  covertchannel.hpp  decoder.hpp  encoder.hpp  genericpacket.hpp  lengthcoder.hpp  morseCoder.hpp  packetlengthcovertchannel.hpp  pcapwrapper.hpp  sniffer.hpp  socketconnector.hpp  tcpheadercovertchannel.hpp  tcppacket.hpp  timingcovertchannel.hpp  udppacket.hpp  whisper_library_wrapper.hpp
whisperLibrary/src/: bitSetDecoder.cpp  bitSetEncoder.cpp  channelmanager.cpp  ethernetheader.cpp  ethernetheader.hpp  genericpacket.cpp  ipheaderv4.cpp  ipheaderv4.hpp  lengthcoder.cpp  morseCoder.cpp  networkconnector.cpp  networkconnector.hpp  packetlengthcovertchannel.cpp  pcapwrapper.cpp  rawSocketProtocol.hpp  sniffer.cpp  socketSender.cpp  socketSender.hpp  socketconnector.cpp  tcpheadercovertchannel.cpp  tcppacket.cpp  tcppacket.hpp  tcppacketgenerator.cpp  tcppacketgenerator.hpp  timingcovertchannel.cpp  udppacket.cpp  udppacket.hpp  udppacketgenerator.cpp  udppacketgenerator.hpp  whisper_library_wrapper.cpp
whisperLibrary/tests/: bitSetCoderTest.cpp  bitSetDecoderTest.cpp  bitSetEncoderTest.cpp  communicationTest.cpp  lengthCoderTest.cpp  main_test_suite.cpp  morseCoderTest.cpp  networkConnectorTest.cpp  packetLengthCovertChannelTest.cpp  pcapWrapperTest.cpp  snifferTest.cpp  socketConnectionTest.cpp  socketSenderTest.cpp  tcpHeaderCovertChannelTest.cpp  tcpPacketGeneratorTest.cpp  tcpPacketTest.cpp  timingCovertChannelTest.cpp  udpPacketGeneratorTest.cpp
(+109 files in other folders)
